I put all the elements in stacks and fixed them with constraints.

--- a/UserAuthorizationApp/Base.lproj/Main.storyboard
+++ b/UserAuthorizationApp/Base.lproj/Main.storyboard
@@ -17,41 +17,41 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="jQS-PV-Z4j">
-                                <rect key="frame" x="44" y="203" width="286" height="187"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="jQS-PV-Z4j">
+                                <rect key="frame" x="44" y="190" width="287" height="187"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="n3E-hV-PoB">
-                                        <rect key="frame" x="0.0" y="0.0" width="286" height="98"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="287" height="98"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aKr-nl-02h">
-                                                <rect key="frame" x="0.0" y="0.0" width="286" height="34"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="287" height="34"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="65d-PF-XE6">
-                                                <rect key="frame" x="0.0" y="64" width="286" height="34"/>
+                                                <rect key="frame" x="0.0" y="64" width="287" height="34"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                         </subviews>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gzw-Vs-3Jp">
-                                        <rect key="frame" x="0.0" y="111" width="286" height="36"/>
+                                        <rect key="frame" x="0.0" y="111" width="287" height="36"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="Log in"/>
                                     </button>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="75" translatesAutoresizingMaskIntoConstraints="NO" id="Usa-gj-8fs">
-                                        <rect key="frame" x="0.0" y="160" width="286" height="27"/>
+                                        <rect key="frame" x="0.0" y="160" width="287" height="27"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yxF-gc-cEt">
-                                                <rect key="frame" x="0.0" y="0.0" width="110" height="27"/>
+                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yxF-gc-cEt">
+                                                <rect key="frame" x="0.0" y="0.0" width="111" height="27"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                 <state key="normal" title="Forgot User Name?"/>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="26Q-F7-HNn">
-                                                <rect key="frame" x="185" y="0.0" width="101" height="27"/>
+                                                <rect key="frame" x="186" y="0.0" width="101" height="27"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                 <state key="normal" title="Forgot Password?"/>
@@ -63,6 +63,11 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="jQS-PV-Z4j" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="44" id="McW-FE-xDU"/>
+                            <constraint firstItem="jQS-PV-Z4j" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="190" id="icI-FM-7Jx"/>
+                            <constraint firstItem="jQS-PV-Z4j" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="y2D-QC-nTg"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
