Added another screen and placed a button and two labels.

--- a/UserAuthorizationApp/Base.lproj/Main.storyboard
+++ b/UserAuthorizationApp/Base.lproj/Main.storyboard
@@ -10,8 +10,60 @@
     </dependencies>
     <scenes>
         <!--View Controller-->
+        <scene sceneID="ulW-CY-GE0">
+            <objects>
+                <viewController id="Q62-Vn-EoV" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="4TU-XF-byd">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vEw-mQ-CYj">
+                                <rect key="frame" x="87.5" y="93" width="200" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="LdP-aB-r4q"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="👋" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Qm-ad-qXe">
+                                <rect key="frame" x="156" y="162" width="63" height="70"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="58"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HT3-Xc-wS1">
+                                <rect key="frame" x="152.5" y="438" width="70" height="38"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="70" id="NoM-Qq-uvd"/>
+                                    <constraint firstAttribute="height" constant="38" id="xBZ-w9-sZh"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                <state key="normal" title="Log out">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Mdq-hl-w7y"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="HT3-Xc-wS1" firstAttribute="centerX" secondItem="4TU-XF-byd" secondAttribute="centerX" id="C9C-SP-qh6"/>
+                            <constraint firstItem="3Qm-ad-qXe" firstAttribute="top" secondItem="vEw-mQ-CYj" secondAttribute="bottom" constant="40" id="NK9-fw-HUH"/>
+                            <constraint firstItem="vEw-mQ-CYj" firstAttribute="centerX" secondItem="4TU-XF-byd" secondAttribute="centerX" id="QRA-Hd-Muo"/>
+                            <constraint firstItem="vEw-mQ-CYj" firstAttribute="top" secondItem="Mdq-hl-w7y" secondAttribute="top" constant="93" id="bLD-OQ-hsS"/>
+                            <constraint firstItem="3Qm-ad-qXe" firstAttribute="centerX" secondItem="4TU-XF-byd" secondAttribute="centerX" id="d8d-lc-x4r"/>
+                            <constraint firstItem="Mdq-hl-w7y" firstAttribute="bottom" secondItem="HT3-Xc-wS1" secondAttribute="bottom" constant="191" id="nu5-Jm-q6T"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="H4K-x2-mT8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1846" y="24"/>
+        </scene>
+        <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="UserAuthorizationApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
@@ -41,17 +93,17 @@
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="Log in"/>
                                     </button>
-                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="75" translatesAutoresizingMaskIntoConstraints="NO" id="Usa-gj-8fs">
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="75" translatesAutoresizingMaskIntoConstraints="NO" id="Usa-gj-8fs">
                                         <rect key="frame" x="0.0" y="160" width="287" height="27"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yxF-gc-cEt">
-                                                <rect key="frame" x="0.0" y="0.0" width="111" height="27"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yxF-gc-cEt">
+                                                <rect key="frame" x="0.0" y="0.0" width="110.5" height="27"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                 <state key="normal" title="Forgot User Name?"/>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="26Q-F7-HNn">
-                                                <rect key="frame" x="186" y="0.0" width="101" height="27"/>
+                                                <rect key="frame" x="185.5" y="0.0" width="101.5" height="27"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                 <state key="normal" title="Forgot Password?"/>
@@ -62,7 +114,7 @@
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                         <constraints>
                             <constraint firstItem="jQS-PV-Z4j" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="44" id="McW-FE-xDU"/>
                             <constraint firstItem="jQS-PV-Z4j" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="190" id="icI-FM-7Jx"/>
@@ -70,12 +122,14 @@
                         </constraints>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="64.799999999999997" y="-27.436281859070466"/>
+            <point key="canvasLocation" x="1098" y="24"/>
         </scene>
     </scenes>
     <resources>
+        <systemColor name="opaqueSeparatorColor">
+            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
